# baseball-ai

./: CLAUDE.md  README.md  pyproject.toml
backend/: main.py
