[project]
name = "baseball-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.100.0",
    "black>=26.3.1",
    "chainlit>=2.11.1",
    "fastapi>=0.136.1",
    "google-cloud-bigquery>=3.41.0",
    "uvicorn>=0.46.0",
]
